tests/baselines/reference/everyTypeWithInitializer(strict=true).errors.txt
everyTypeWithInitializer.ts(6,5): error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
everyTypeWithInitializer.ts(10,5): error TS2564: Property 'source' has no initializer and is not definitely assigned in the constructor.
everyTypeWithInitializer.ts(11,5): error TS2564: Property 'recurse' has no initializer and is not definitely assigned in the constructor.
everyTypeWithInitializer.ts(12,5): error TS2564: Property 'wrapped' has no initializer and is not definitely assigned in the constructor.
everyTypeWithInitializer.ts(19,9): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
everyTypeWithInitializer.ts(40,16): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== everyTypeWithInitializer.ts (6 errors) ====
    interface I {
        id: number;
    }
    
    class C implements I {
        id: number;
        ~~
!!! error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
    }
    
    class D<T>{
        source: T;
        ~~~~~~
!!! error TS2564: Property 'source' has no initializer and is not definitely assigned in the constructor.
        recurse: D<T>;
        ~~~~~~~
!!! error TS2564: Property 'recurse' has no initializer and is not definitely assigned in the constructor.
        wrapped: D<D<T>>
        ~~~~~~~
!!! error TS2564: Property 'wrapped' has no initializer and is not definitely assigned in the constructor.
    }
    
    function F(x: string): number { return 42; }
    
    module M {
        export class A {
            name: string;
            ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    var aNumber = 9.9;
    var aString = 'this is a string';
    var aDate = new Date(12);
    var anObject = new Object();
    
    var anAny = null;
    var anOtherAny = <any> new C();
    var anUndefined = undefined;
    
    
    var aClass = new C();
    var aGenericClass = new D<string>();
    var anObjectLiteral = { id: 12 };
    
    var aFunction = F;
    var aLambda = (x) => 2;
                   ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    var aModule = M;
    var aClassInModule = new M.A();
    var aFunctionInModule = M.F2;
    
    // no initializer or annotation, so this is an 'any'
    var x;
    
    